[gd_scene load_steps=8 format=3 uid="uid://bcou7m4bnhllw"]

[ext_resource type="Script" path="res://scenes/objects/scripts/ball.gd" id="1_csktg"]
[ext_resource type="Texture2D" uid="uid://cu14msn4n41f6" path="res://assets/Balls/Yellow/ballYellow_04.png" id="1_ywlpj"]
[ext_resource type="Texture2D" uid="uid://dwld0tmagrvd6" path="res://assets/Particles white/particleWhite_5.png" id="3_h2vhp"]
[ext_resource type="AudioStream" uid="uid://de76c6jucx7jf" path="res://audio/SFX/gameboy-pluck-41265.mp3" id="4_itfg3"]
[ext_resource type="AudioStream" uid="uid://864mwx2txtmu" path="res://audio/SFX/retro-coin-3-236679.mp3" id="5_1ll57"]
[ext_resource type="AudioStream" uid="uid://m5inwfwpdmrv" path="res://audio/SFX/skip-sfx-38509.mp3" id="6_qjagr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_21t6r"]
radius = 65.0308

[node name="Ball" type="CharacterBody2D"]
script = ExtResource("1_csktg")

[node name="BallShape" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ywlpj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_21t6r")

[node name="ArrowShape" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_h2vhp")
offset = Vector2(0, -200)

[node name="SFX" type="Node2D" parent="."]

[node name="BlockCollision" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_itfg3")

[node name="WallCollision" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_1ll57")

[node name="PaddleCollision" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_qjagr")
